# utilcpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: cmakeconfig.cmake  cmakeutils.cmake  utilcpp_projects.cmake
include/utilcpp/: Assert.hpp  Log.hpp  Singleton.hpp  singleton.hpp
sources/: Log.cpp  log.cpp
